# mypy_boto3_builder

./: .all-contributorsrc  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  FUNDING.yml  MANIFEST.in  Pipfile  README.md  SECURITY.md  codecov.yml  conftest.py  istub.yml  istub_aio.yml  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vulture_whitelist.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  vulnerability_report.md
.github/workflows/: aio_consistency_check.yml  aio_integration.yml  aio_sanity_check.yml  aioboto3_stubs_check.yml  aiobotocore_stubs_check.yml  aiostubs_check.yml  consistency_check.yml  helpers.js  integration.yml  integration_build.yml  integration_custom.yml  integration_full.yml  on_manual_publish.yml  on_push.yml  on_push_coverage.yml  on_push_docs.yml  on_push_e2e.yml  on_push_integration.yml  on_push_test.yml  on_release.yml  on_release_docs.yml  on_timer_publish.yml  publish_aiobotocore_full.yml  publish_aiobotocore_stubs.yml  publish_boto3_full.yml  publish_boto3_stubs.yml  publish_types_aioboto3.yml  publish_types_boto3.yml  publish_types_boto3_full.yml  sanity_boto3_stubs.yml  sanity_check.yml  sanity_types_aioboto3.yml  sanity_types_aiobotocore.yml  stubs_check.yml
aio_examples/: s3_example.py
aio_examples/mypy/: s3_example.py.out
aio_examples/pyright/: s3_example.py.json
check_stubs_snapshots/: aioboto3.txt  aiobotocore.txt  boto3.txt  botocore.txt  s3transfer.txt
docs/: 404.html  MODULES.md  README.md  _config.yml  index.html  sitemap.xml
docs/aio_examples/: index.html
docs/architecture/: index.html
docs/development/: index.html
docs/examples/: index.html
docs/how_it_works/: index.html
docs/how_to_build/: index.html
docs/mypy_boto3_builder/: aiobotocore_generator.md  boto3_generator.md  cli_parser.md  constants.md  index.html  index.md  jinja_manager.md  logger.md  main.md  module.md  package_data.md  service_name.md  version.md
docs/pre_build/: index.html
docs/search/: search_index.json
docs/thank_you/: index.html
docsmd/: README.md  architecture.md  development.md  how_it_works.md  how_to_build.md  index.md  pre_build.md  thank_you.md
docsmd/aio_examples/: index.md  s3_example.md
docsmd/examples/: dynamodb_example.md  ec2_example.md  emr_example.md  iam_example.md  index.md  s3_example.md  secretsmanager_example.md  sqs_example.md
docsmd/js/: highlight.js
docsmd/mypy_boto3_builder/: cli_parser.md  constants.md  index.md  jinja_manager.md  logger.md  main.md  module.md  package_data.md  service_name.md
examples/: dynamodb_example.py  ec2_example.py  emr_example.py  iam_example.py  s3_example.py  secretsmanager_example.py  sqs_example.py
examples/e2e_snapshots/: dynamodb_example.py.out  ec2_example.py.out  emr_example.py.out  iam_example.py.out  s3_example.py.out  secretsmanager_example.py.out  sqs_example.py.out
examples/mypy/: dynamodb_example.py.out  ec2_example.py.out  emr_example.py.out  iam_example.py.out  s3_example.py.out  secretsmanager_example.py.out  sqs_example.py.out
examples/pyright/: dynamodb_example.py.json  ec2_example.py.json  emr_example.py.json  iam_example.py.json  s3_example.py.json  secretsmanager_example.py.json  sqs_example.py.json
integration/boto3_stubs/: dynamodb_example.py  ec2_example.py  emr_example.py  iam_example.py  s3_example.py  secretsmanager_example.py  sqs_example.py
integration/boto3_stubs_lite/: s3_example.py
integration/types_aioboto3/: s3_example.py
integration/types_aioboto3_lite/: s3_example.py
integration/types_aiobotocore/: s3_example.py
integration/types_aiobotocore_lite/: s3_example.py
integration/types_boto3/: dynamodb_example.py  ec2_example.py  emr_example.py  iam_example.py  s3_example.py  secretsmanager_example.py  sqs_example.py
integration/types_boto3_lite/: s3_example.py
mypy_boto3_builder/: __init__.py  __main__.py  aiobotocore_generator.py  boto3_generator.py  chat_buddy.py  cli_parser.py  constants.py  debug.py  exceptions.py  jinja_manager.py  logger.py  main.py  package_data.py  service_name.py  type_defs.py  version.py  version.txt
mypy_boto3_builder/aiobotocore_stubs_static/: __init__.pyi  args.pyi  client.pyi  credentials.pyi  endpoint.pyi  httpsession.pyi  paginate.pyi  parsers.pyi  session.pyi  waiter.pyi
mypy_boto3_builder/boto3_ports/: __init__.py  model.py
mypy_boto3_builder/boto3_stubs_static/: __init__.pyi  compat.pyi  exceptions.pyi  session.pyi  utils.pyi
mypy_boto3_builder/botocore_stubs_static/: __init__.pyi  args.pyi  auth.pyi  awsrequest.pyi  client.pyi  compat.pyi  config.pyi  configprovider.pyi  credentials.pyi  discovery.pyi  endpoint.pyi  (+21 more)
scripts/: before_commit.sh  build.sh  build_aiobotocore_docs.sh  build_docs.sh  build_main.sh  bump_version.sh  check_botocore_stubs.sh  check_output.py  check_output.sh  check_stubs.py  check_stubs.sh  ci.py  coverage.sh  docker.sh  dockerize.sh  docs.sh  get_services.js  install.sh  install_aiobotocore.sh  install_dev.sh  integration.py  integration.sh  open.sh  open_aioboto3.sh  open_aiobotocore.sh  open_boto3.sh  publish_types.sh  pull_static.py  pyproject.toml  pyrightconfig_output.json  release.py  release.sh  release_aiobotocore.sh  release_types_s3transfer.sh  test_upload.sh  uninstall.sh
service_docs/: index.md
tests/: __init__.py  test_cli_parser.py  test_constants.py  test_jinja_manager.py  test_logger.py  test_main.py  test_service_name.py
types_boto3/: README.md  setup.cfg  setup.py
types_boto3/types_boto3/: __init__.py
types_botocore/: README.md  setup.cfg  setup.py
types_botocore/types_botocore/: __init__.py
types_s3transfer/: README.md  setup.cfg
types_s3transfer/s3transfer-stubs/: __init__.pyi  bandwidth.pyi  compat.pyi  constants.pyi  copies.pyi  crt.pyi  delete.pyi  download.pyi  exceptions.pyi  futures.pyi  manager.pyi  processpool.pyi  subscribers.pyi  tasks.pyi  upload.pyi  utils.pyi
(+2319 files in other folders)
