[metadata]
name = mypy-boto3-builder
version = 4.18.0
author = Vlad Emelianov
author_email = vlad.emelianov.nz@gmail.com
home_page = https://github.com/vemel/mypy_boto3_builder
description = Builder for boto3-stubs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = boto3 type-annotations pyright mypy boto3-stubs
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://mypy-boto3-builder.readthedocs.io/en/latest/
    Source = https://github.com/vemel/mypy_boto3_builder
    Tracker = https://github.com/vemel/mypy_boto3_builder/issues

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
mypy_boto3_builder =
    py.typed
    templates/*/*.jinja2
    templates/*/*/*.jinja2
    templates/*/*/*/*.jinja2
    boto3_stubs_static/*.pyi
    boto3_stubs_static/*/*.pyi
    boto3_stubs_static/*/*.py
    botocore_stubs_static/*.pyi
    botocore_stubs_static/*/*.pyi
    botocore_stubs_static/*/*.py

[options.entry_points]
console_scripts = 
    mypy_boto3_builder = mypy_boto3_builder.main:main

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py,*.pyi
ignore = E203,W503,E501
max-complexity = 14

[mypy]
python_version = 3.9
warn_return_any = False
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
ignore_errors = False

[mypy-tests.*]
ignore_errors = True
