[metadata]
name = types-botocore
version = 1.0.2
author = Vlad Emelianov
author_email = vlad.emelianov.nz@gmail.com
home_page = https://github.com/youtype/mypy_boto3_builder
description = Proxy package for botocore-stubs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = boto3 type-annotations pyright mypy boto3-stubs
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Stubs Only
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://youtype.github.io/boto3_stubs_docs/
    Source = https://github.com/youtype/mypy_boto3_builder
    Tracker = https://github.com/youtype/mypy_boto3_builder/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    botocore-stubs

[options.package_data]
types_botocore =
    py.typed
