[metadata]
name = types-s3transfer
version = 0.6.0
author = Vlad Emelianov
author_email = vlad.emelianov.nz@gmail.com
home_page = https://github.com/youtype/mypy_boto3_builder
description = Type annotations and code completion for s3transfer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = boto3 type-annotations pyright mypy boto3-stubs
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Stubs Only
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://youtype.github.io/boto3_stubs_docs/
    Source = https://github.com/youtype/mypy_boto3_builder
    Tracker = https://github.com/youtype/mypy_boto3_builder/issues

[options]
zip_safe = False
include_package_data = True
packages = s3transfer-stubs

[options.package_data]
* =
    py.typed
    *.pyi
